--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="review review-1">
         <div class="user">
           <div class="img-div">
-            <img src="./images/image-daniel.jpg" alt="Daniel Clifford" class="profile-img">
+            <img src="./images/image-daniel.jpg" alt="Daniel Clifford" class="profile-img daniel-img">
           </div>
           <div class="name-graduate">
             <p class="name">Daniel Clifford</p>
@@ -28,7 +28,20 @@
           The next 12 weeks was the best - and most grueling - time of my life. Since completing 
           the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”</p>
       </div>
-      <div class="review review-2"></div>
+      <div class="review review-2">
+        <div class="user">
+          <div class="img-div">
+            <img src="./images/image-jonathan.jpg" alt="Daniel Clifford" class="profile-img jonathan-img">
+          </div>
+          <div class="name-graduate">
+            <p class="name"> Jonathan Walters</p>
+            <p class="title">Verified Graduate</p>
+          </div>
+        </div>
+        <p class="feedback">The team was very supportive and kept me motivated</p>
+        <p class="description"> “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
+          for a big company. This was one of the best investments I’ve made in myself. ”</p>
+      </div>
       <div class="review review-3"></div>
       <div class="review review-4"></div>
       <div class="review review-5"></div>
@@ -39,13 +52,12 @@
 
  
 
-  Jonathan Walters
-  Verified Graduate
+ 
 
-  The team was very supportive and kept me motivated
 
-  “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
-  for a big company. This was one of the best investments I’ve made in myself. ”
+  
+
+  
 
   Jeanette Harmon
   Verified Graduate
