--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <div class="img-div">
             <img src="./images/image-daniel.jpg" alt="Daniel Clifford" class="profile-img daniel-img">
           </div>
-          <div class="name-graduate">
+          <div class="name-title">
             <p class="name">Daniel Clifford</p>
             <p class="title">Verified Graduate</p>
           </div>
@@ -33,7 +33,7 @@
           <div class="img-div">
             <img src="./images/image-jonathan.jpg" alt="Daniel Clifford" class="profile-img jonathan-img">
           </div>
-          <div class="name-graduate">
+          <div class="name-title">
             <p class="name"> Jonathan Walters</p>
             <p class="title">Verified Graduate</p>
           </div>
@@ -42,55 +42,58 @@
         <p class="description"> “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
           for a big company. This was one of the best investments I’ve made in myself. ”</p>
       </div>
-      <div class="review review-3"></div>
-      <div class="review review-4"></div>
-      <div class="review review-5"></div>
+      <div class="review review-3">
+        <div class="user">
+          <div class="img-div">
+            <img src="./images/image-jeanette.jpg" alt="Jeanette Harmon" class="profile-img jaenette-img">
+          </div>
+          <div class="name-title">
+            <p class="name">Jeanette Harmon</p>
+            <p class="title">Verified Graduate</p>
+          </div>
+        </div>
+        <p class="feedback">An overall wonderful and rewarding experience</p>
+        <p class="description"> “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
+          while doing something I love. ”</p>
+      </div>
+      <div class="review review-4">
+        <div class="user">
+          <div class="img-div">
+            <img src="./images/image-patrick.jpg" alt="Patrick Abrams" class="profile-img patrick-img">
+          </div>
+          <div class="name-title">
+            <p class="name"> Patrick Abrams</p>
+            <p class="title">Verified Graduate</p>
+          </div>
+        </div>
+        <p class="feedback"> Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
+          learning from their experiences was easy.</p>
+        <p class="description"> “ The staff seem genuinely concerned about my progress which I find really refreshing. The program 
+          gave me the confidence necessary to be able to go out in the world and present myself as a capable 
+          junior developer. The standard is above the rest. You will get the personal attention you need from 
+          an incredible community of smart and amazing people. ”</p>
+      </div>
+      <div class="review review-5">
+        <div class="user">
+          <div class="img-div">
+            <img src="./images/image-kira.jpg" alt="Kira Whittle" class="profile-img kira-img">
+          </div>
+          <div class="name-title">
+            <p class="name">Kira Whittle</p>
+            <p class="title">Verified Graduate</p>
+          </div>
+        </div>
+        <p class="feedback">Such a life-changing experience. Highly recommended!</p>
+        <p class="description"> “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
+          professionals who can help me learn programming step by step. I was encouraged to enroll by a former 
+          student of theirs who can only say wonderful things about the program. The entire curriculum and staff 
+          did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team 
+          project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial 
+          could ever have. In fact, I’ve often referred to it during interviews as an example of my developent 
+          experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 
+          100% recommend! ”</p>
+      </div>
     </div>
   </main>
-  <!--
-  
-
- 
-
- 
-
-
-  
-
-  
-
-  Jeanette Harmon
-  Verified Graduate
-
-  An overall wonderful and rewarding experience
-
-  “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
-  while doing something I love. ”
-
-  Patrick Abrams
-  Verified Graduate
-
-  Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
-  learning from their experiences was easy.
-
-  “ The staff seem genuinely concerned about my progress which I find really refreshing. The program 
-  gave me the confidence necessary to be able to go out in the world and present myself as a capable 
-  junior developer. The standard is above the rest. You will get the personal attention you need from 
-  an incredible community of smart and amazing people. ”
-
-  Kira Whittle
-  Verified Graduate
-
-  Such a life-changing experience. Highly recommended!
-
-  “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
-  professionals who can help me learn programming step by step. I was encouraged to enroll by a former 
-  student of theirs who can only say wonderful things about the program. The entire curriculum and staff 
-  did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team 
-  project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial 
-  could ever have. In fact, I’ve often referred to it during interviews as an example of my developent 
-  experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 
-  100% recommend! ” -->
-  
 </body>
 </html>
