--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <main>
     <div class="container">
+      <h1 class="hidden">Testimonials Grid Section</h1>
       <div class="review review-1">
         <div class="user">
           <div class="img-div">
